# gaussian_splatting_3d

./: .gitignore  bt.sh  build_docker.sh  debug.py  generative.py  line_profile.sh  main.py  main_sh.py  readme.md  requirements.txt  resources.md  test.sh  todos.md  update_log.md  vis.py  vis_adctrl.py
conf/: bonsai.yaml  debug.yaml  fern.yaml  fern_sh.yaml  fern_test.yaml  garden.yaml  garden_full.yaml  garden_no_ctrl.yaml  garden_sh.yaml  garden_test.yaml  gen_debug.yaml  generative.yaml  lego.yaml
gaussian/: model.py
generative/: main.py  provider.py
generative/diffusion/: deepfloyd.py  positional_text_embeddings.py  stable_diffusion.py
generative/test/: test_alpha_init.ipynb  test_cam_pos.ipynb  test_sampling.ipynb
gs/: CMakeLists.txt  backend.py  build.sh  culling.py  debug.py  gs.py  initialize.py  renderer.py  setup.py  sh_renderer.py
gs/src/: bindings.cpp  debug.h  render.cu  render.h
renderer/: placeholder.md  setup.py  test.py  tiled_renderer.py
renderer/src/: CMakeLists.txt  bindings.cpp  kernels.cu  renderer.cu  renderer.h  utils.cu
renderer/src/include/: data_spec.hpp  data_spec_packed.hpp
scripts/: line_profile.sh  ncu.sh  nsys_restricted.sh  nvprof.sh  run.sh
test/: gaussian_test.py  sd_gen.ipynb  square_g_test.py  test.py  test.yaml  test_logger.py  test_mm.ipynb  test_pcd.py  test_rnd_pts.py  test_vis.py  vis_adctrl.py  viz_cams.ipynb  viz_pcd.ipynb
test/cub/: test.cpp
test/cuda/: warp_sum  warp_sum.cu
utils/: activations.py  camera.py  export.py  loss.py  metrics.py  misc.py  p3d_helper.py  schedulers.py  transforms.py
(+14 files in other folders)
